module7/p2/02-https-goweb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  #ingressClassName: nginx
  tls:
    - hosts:
      - other.lvxiaohu.cn
      secretName: other-lvxiaohu-cn-tls
  rules:
  - host: "other.lvxiaohu.cn"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: "go-web-service"
            port:
              number: 80
